--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/rodrigmars/GestaoSaudeApp#readme",
   "dependencies": {
+    "compression": "^1.7.0",
+    "debug": "^3.0.1",
     "express": "^4.15.4",
     "mongoose": "^4.11.10",
     "morgan": "^1.8.2"
